# GAMUT-release

./: README.md  auto-tune.py  declr-aggregation  declr-natural  declr-selection  declr-standard  declr-unlinear
GAMUT-aggregate/: Makefile  iterator.h  launch.cu  macros.h  main.cu  operator.h
GAMUT-heap/: iterator.h  macros.h  main.cu
GAMUT-selection/: constants.h  launch.h  macros.h  main.cu
GAMUT-standard/: iterator.h  kernel.cu  kernel.h  m_alloc.h  macros.h  main.cu
GAMUT-template/: gpu_timer.cc  main.cu
Xyz-aggregate/: heap.h  utils.h
Xyz-heap/: iterator.h
Xyz-selection/: heap.cu  iterator.h  m_alloc.cu  main.cu
Xyz-standard/: macros.h  tile_helper.h
Xyz-template/: iterator.h
codegen/: codegen.py  parseWalker.py  statmt.g4
mmlts-test/: CMakeLists.txt  common.h  gpu_timer.h  helper.h  m_alloc.cu  m_alloc.h  main.cc  naive.h  test_script.py  tvm_mm.py
mmlts-test/example1/: iterator.h  kernel.cu  kernel.h  launch.cu  launch.h  macros.h  operator.h  utils.h
mmlts-test/example2/: iterator.h  kernel.cu  kernel.h  launch.cu  launch.h  macros.h  operator.h  utils.h
mmlts-test/example3/: iterator.h  kernel.cu  kernel.h  launch.cu  launch.h  macros.h  operator.h  utils.h
mmlts-test/example4/: iterator.h  kernel.cu  kernel.h  launch.cu  launch.h  macros.h  operator.h  utils.h
mmlts-test/example5/: CMakeLists.txt  iterator.h  kernel.cu  kernel.h  launch.cu  launch.h  macros.h  operator.h  utils.h
mmlts-test/example6/: heap.cu  heap.h  iterator.h  kernel.cu  kernel.h  launch.cu  launch.h  macros.h  operator.h  utils.h
mmlts-test/query2/: iterator.h  kernel.cu  kernel.h  launch.cu  launch.h  macros.h  operator.h  utils.h
mmlts-test/workkernel/: iterator.h  kernel.cu  kernel.h  launch.cu  macros.h  operator.h  utils.h
standard-test/: CMakeLists.txt  README.md  m_alloc.cu  m_alloc.h  main.cc  mm_func.cu  mm_func.h  naive.h  test_script.py  tvm_mm.py
standard-test/cutlass/: CMakeLists.txt
standard-test/workkernel/: CMakeLists.txt  kernel.cu  launch.cu  macros.h  utils.h
